src/css/style.css
/* ... */
.left .message {
  margin-right: 10%;
}

.right .message {
  margin-left: 10%;
}

@media (max-width: 800px) {
  .left .message {
    margin-right: 10%;
  }

  .right .message {
    margin-left: 10%;
  }
}

.left .message .message-body {
  background-color: var(--black);
}

.right .message .message-body {
  background-color: var(--white);
  color: var(--black);
}
.message-time {
  margin: 10px 0;
}

.right .message .message-time {
  text-align: right;
}

.left .message .message-time {
  text-align: left;
}

/** Image **/

.images {
  margin-top: 3rem;
  position: relative;
}

.images-mobile {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.image {
  position: sticky;
  top: 3rem;
}

.image img {
  margin: 0 auto;
}

#facial-recognition .image img {
  max-width: 80%;
  opacity: 50%;
}

#facial-recognition .image img[alt="Image Recognition 1"] {
  opacity: 90%;
}

/** Chart **/
.graph-container {
  color: var(--white);
  margin: 2rem auto;
  padding: 6rem 0 2rem 0;
}

.chart {
  font-size: 0.60rem;
  margin: 4rem auto;
  max-width: 80%;
  font-family: "TT Firs Neue Var Roman", Inter, Roboto, "Helvetica Neue",
    "Arial Nova", "Nimbus Sans", Arial, sans-serif;
}

.chart-legend {
  display: flex;
  flex-wrap: wrap;
  width: 90%;
}

/** Faces with information **/
.faces-with-info {
  align-items: flex-start;
  background-image: url(/images/info-faces/background.png);
  background-repeat: no-repeat;
  background-size: cover;
  color: var(--white);
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  min-height: 500px;
  justify-content: center;
  width: 100%;
}

#profile-fade-image-1 {
  padding: 4rem 1rem;
}

#profile-fade-image-2 {
  padding: 6rem 1rem 0 0;
}

#profile-fade-image-3 {
  padding: 2rem 1rem 0 0;
}

.profile {
  display: flex;
  flex-direction: row;
}

@media (max-width: 400px) {
  .profile {
    flex-direction: column;
  }
}

.profile-image-container {
  background-color: white;
}

.profile-info {
  font-size: 0.75rem;
  margin-top: 100px;
  padding-left: 1rem;
}

.profile-info p {
  margin-bottom: 0;
}

/** Portrait **/
.portraits {
  display: flex;
  flex-flow: wrap;
  justify-content: center;
}

.portrait {
  height: 100%;
  justify-content: center;
  opacity: 2%;
  width: 80px;
}

/** Terminal **/
.terminal-container {
  font-family: "Source Code Pro", sans-serif;
  margin-top: 4.5rem;
  padding: 4.5rem 0;
}

.terminal {
  border: 2px solid var(--white);
  height: 100%;
  margin: 0 auto;
  max-width: var(--max-section-width);
  overflow: auto;
  text-align: left;
}

.terminal h3 {
  background: var(--white);
  color: var(--black);
  padding: 0 1rem;
}

.terminal h3 + p,
.terminal .output-container {
  padding: 0 1rem;
}

.terminal .input-span .prompt {
  padding-left: 1rem;
}

.terminal .user-name {
  color: var(--green);
}

.terminal .machine-name {
  color: var(--blue);
}

.terminal input,
.terminal-container {
  background: var(--black);
  color: var(--white);
}

.terminal span.command {
  /* add extra pixel because input has cursor */
  margin-left: 0.575rem;
}

.terminal input {
  margin-left: 0.5rem;
}

.terminal input:focus-visible,
.terminal input {
  border: none;
  outline: none;
}

.terminal .help ul {
  display: flex;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding-left: 1rem;
}

.terminal .help ul ul {
  padding: 0;
}

.terminal .help .sub-command-list li:not(.requires-sub-commands) {
  padding-left: 1rem;
}

.terminal .help li {
  display: flex;
}

.terminal .help li .command-name {
  font-weight: bold;
  margin-right: 1rem;
}

.terminal .help li .command-name::after {
  content: ":";
}

.terminal .error {
  color: var(--red);
}

/** Ticker **/
.tickers {
  height: 0;
}

@media (max-width: 800px) {
  .tickers {
    display: flex;
    flex-direction: column;
    gap: 2rem;
  }
}

.ticker {
  font-family:"TT Firs Neue Var Roman", Inter, Roboto, "Helvetica Neue", "Arial Nova", "Nimbus Sans", Arial, sans-serif;
  background-color: var(--black);
  color: var(--white);
  padding: 10px 20px;
  position: relative;
  width: fit-content;
  z-index: 99;
}

/** Final ticker **/
h2.final-ticker {
  font-family:"TT Firs Neue Var Roman", Inter, Roboto, "Helvetica Neue", "Arial Nova", "Nimbus Sans", Arial, sans-serif;
  font-size: 2.5rem !important;
  width:75% !important;
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 10px auto;
}

/** Draggable Pile **/

.pile {
  border-bottom: 1px solid var(--white);
  border-top: 1px solid var(--white);
  height: 100vh;
  /* needed to make element use whole width of screen */
  margin-left: calc(50% - 50vw);
  margin-right: calc(50% - 50vw);
  margin-top: 5rem;
  overflow: hidden;
  position: relative;
  width: 100vw;
}

.card {
  position: absolute;
}

.image-constraint {
  max-height: 60vh;
  width: 30vw;
}

.post-draggable {
  background-color: var(--white);
  box-shadow: 0 3px 10px rgb(0 0 0 / 0.3);
  color: var(--black);
  display: grid;
  font-family: monospace;
  font-size: 1rem;
  gap: 1rem;
  grid-template-areas:
    "avatar forwardedFrom"
    "empty content"
    "empty meta";
  grid-template-columns: max-content 1fr;
  grid-template-rows: auto;
  padding: 1rem 2rem;
  width: 520px;
}

.post-avatar-draggable {
  grid-area: avatar;
  
}

.post-forwarded-from-draggable {
  grid-area: forwardedFrom;
  padding-top: 0.25rem;
}

.post-content-draggable {
  grid-area: content;
  text-align: left;
}

.post-meta-draggable {
  display: flex;
  flex-direction: row-reverse;
  grid-area: meta;
  justify-content: space-between;
}

.post-view-count-draggable {
  margin-left: 2rem;
  position: relative;
}
.post-view-count-draggable::before {
  content: url(/images/eye.svg);
  display: inline-block;
  left: -2rem;
  position: absolute;
  top: -0.35rem;
}

.post-date-time-draggable {
  display: flex;
  gap: 0.5rem;
}
/* ... */

